--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: postrabbitmq
-    password: postrabbitmq!@#100
+    username: rabbitmqPost
+    password: rabbitmqPost@!#
   data:
     mongodb:
       host: localhost
